--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
-  <header class="header_new">
+  <header class="header">
     Header
   </header>
+  <main class="content"></main>
   <footer class="footer">
     Footer
   </footer>
