--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
-  Placeholder
+  <header class="header">
+    Header
+  </header>
+  <main class="content"></main>
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 </html>
